Sortable in place need to test more. But I got sidetracked and fixed a spacing issue with the test building part of it so that is here as well

--- a/css/gherkin_edit.scss
+++ b/css/gherkin_edit.scss
@@ -1,5 +1,7 @@
-form.gherkin-generator-node-form {
-
+.node-gherkin_generator-form {
+  ul.sortable {
+    list-style: none;
+  }
 
 }
 
